# simple-release-management

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.cs.md  README.md  docker-compose.yml  test-web-ui.sh
docs/: ENV_MIGRATION.md
migrations/: 20260202000001_create_tenants.sql  20260202000002_create_registries.sql  20260202000003_create_bundles.sql  20260202000004_create_bundle_versions.sql  20260202000005_create_image_mappings.sql  20260202000006_create_releases.sql  20260202000007_add_registry_credentials.sql  20260202000008_add_tenant_slug_description.sql  20260202000009_add_cascade_to_releases.sql  20260202000010_add_bundle_tenant_check.sql  20260203000011_make_image_mappings_nullable.sql  20260203000012_copy_jobs_and_immutable_mappings.sql  20260203000013_bundle_versions_archive.sql  20260203000014_copy_jobs_release_fields.sql  20260204000001_add_deploy_targets_and_app_fields.sql  20260204000002_add_deploy_target_encjson_keys.sql  20260204000003_copy_job_logs.sql  20260204000004_deploy_job_logs.sql  20260204000005_copy_job_cancelled_status.sql  20260204000006_deploy_job_diffs.sql  20260205000001_bundle_auto_tag.sql  20260205000002_auto_release_and_deploy_target.sql  20260205000003_deploy_target_tag_suffix.sql  20260206000001_git_repositories.sql  20260206000002_relax_deploy_target_repo_urls.sql  20260206000003_relax_deploy_target_paths.sql  20260206000004_add_release_manifest_mode.sql  20260206000005_deploy_target_env_vars.sql  20260206000006_deploy_job_dry_run.sql  20260206000007_deploy_job_images.sql  20260206000009_release_source_ref_mode.sql  (+26 more)
(+35 files in other folders)
