[package]
name = "simple-release-management"
version = "0.26.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "1.0"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }
async-stream = "0.3"

# Async trait
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenSSL with vendored feature
openssl = { version = "0.10", features = ["vendored"] }

# Config
dotenv = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
rand = "0.10"
base64 = "0.22"
sha2 = "0.10"
tempfile = "3"
url = "2"
walkdir = "2"
